0.1.0
-----
First tag. Added color filters.

