@@ -1,3 +1,5 @@
+Added default choices for color filters (ColorFilter enum).
+
 0.1.0
 -----
 First tag. Added color filters.
